--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/layout.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Codgrit Insights</title>
 </head>
 <body>
-    <div class="parent">
-        <header class="section yellow">Header</header>
-        <main class="section blue">Main</main>
-        <footer class="section green">Footer Content</footer>
+    <div class="navbar">
+        <div class="container flex">
+            <h1 class="logo">Codgrit insights</h1>
+                <nav>
+                    <ul>
+                        <li class="nav"><a class="outline" href="">Log in</a></li>
+                        <li class="nav"><a class="outline" href="">Our team</a></li>
+                    </ul>
+                </nav>
+        </div>
     </div>
 </body>
 </html>
