--- a/index.html
+++ b/index.html
@@ -13,14 +13,43 @@
 <body>
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">Codgrit insights</h1>
+            <h1 class="logo">Codgrit Insights</h1>
                 <nav>
                     <ul>
-                        <li class="nav"><a class="outline" href="">Log in</a></li>
-                        <li class="nav"><a class="outline" href="">Our team</a></li>
+                        <li class="nav"><a class="outline" href="">WHO WE ARE</a></li>
+                        <li class="nav"><a class="outline" href="">WHAT WE DO</a></li>
+                        <li class="nav"><a class="outline" href="">JOIN OUR TEAM</a></li>
                     </ul>
                 </nav>
         </div>
     </div>
+<!-- Showcase section-->
+<section class="showcase">
+    <div class="container">
+        <div class="grid">
+          <div class="grid-item-1">
+            <div class="showcase-text">
+              <h1>Build collaborative & sustainable data-driven solutions for today's government and development partners</h1>
+              <p class="supporting-text">With the right technology solutions partner, it is easier to tackle the worlds toughest challenges </p>
+            </div>
+            <div class="showcase-form">
+              <form action="">
+                <input type="email" placeholder="Enter your email address">
+                <input type="submit" class="btn" value="Join our team">
+              </form>
+              
+            </div>
+          </div>
+
+          <div class="grid-item-2">
+            <div class="image">
+              <img src="./assets/images/hero.jpg" alt="">
+            </div>
+          </div>
+       </div>
+
+    </div>
+  </section>
+
 </body>
 </html>
