--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Codgrit Insights</title>
+    <title>Codgrit</title>
 </head>
 <body>
     <div class="navbar">
+        
         <div class="container flex">
-            <h1 class="logo">Codgrit Insights</h1>
+            <div>
+                <img src="./assets/images/logo.png" alt="Codgrit logo" class="brand">
+            </div>
+            <h1 class="logo">ICT4Dev</h1>
                 <nav>
                     <ul>
                         <li class="nav"><a class="outline" href="">WHO WE ARE</a></li>
                         <li class="nav"><a class="outline" href="">WHAT WE DO</a></li>
+                        <li class="nav"><a class="outline" href="">OUR APPROACH</a></li>
                         <li class="nav"><a class="outline" href="">JOIN OUR TEAM</a></li>
                     </ul>
                 </nav>
@@ -50,6 +55,27 @@
 
     </div>
   </section>
-
+ <!--Stats section-->
+ <div class="lower-container container">
+    <section class="stats">
+        <div class="flex">
+            <div class="stat">
+                <i class="fa fa-mobile fa-4x" aria-hidden="true"></i>
+                <h3 class="title">Collect and understand requirements</h3>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nisi libero quis eum alias. Odio laboriosam inventore ipsam assumenda ad sapiente, labore eaque! Aspernatur labore perspiciatis est, maxime mollitia harum?</p>
+            </div>
+            <div class="stat">
+                <i class="fa fa-cog fa-spin fa-4x fa-fw" aria-hidden="true"></i>
+                <h3 class="title">Collect and understand requirements</h3>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nisi libero quis eum alias. Odio laboriosam inventore ipsam assumenda ad sapiente, labore eaque! Aspernatur labore perspiciatis est, maxime mollitia harum?</p>
+            </div>
+            <div class="stat">
+                <i class="fa fa-cog fa-spin fa-4x fa-fw" aria-hidden="true"></i>
+                <h3 class="title">Collect and understand requirements</h3>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nisi libero quis eum alias. Odio laboriosam inventore ipsam assumenda ad sapiente, labore eaque! Aspernatur labore perspiciatis est, maxime mollitia harum?</p>
+            </div>
+        </div>
+    </section>
+ </div>
 </body>
 </html>
