--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     </div>
   </section>
- <!--Stats section-->
+ <!--Stats section
  <div class="lower-container container">
     <section class="stats">
         <div class="flex">
@@ -76,7 +76,7 @@
             </div>
         </div>
     </section>
-    <!--Footer-->
+    -->
     
  </div>
 </body>
