added my name to the page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div>
                 <img src="./assets/images/logo.png" alt="Codgrit logo" class="brand">
             </div>
-            <h1 class="logo">ICT4Dev</h1>
+            <h1 class="logo">Welcome to Lawrence's portfolio</h1>
                 <nav>
                     <ul>
                         <li class="nav"><a class="outline" href="">WHO WE ARE</a></li>
