--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 <!-- Navbar -->
 <nav>
-  <h1>LAWRENCEO</h1>
+  <h1>LAWRENCE ONEN</h1>
   <ul class="navigation">
     <li><a href="#about" class="nav-link">About</a></li>
     <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -52,36 +52,159 @@
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          I'm passionate about building products; an agile preacher and practitioner ; 
-          A proven Software engineer,  proactive and result-oriented professional
-          backed by over ten years of experience of building and leading 
-          SCRUM teams to develop products in the agriculture, educational, health, and fintech sectors.
+          I'm a passionate Software Engineering Manager with a knack for building products in a fast pasced agile setting.
+          I can write code, test and do peer code reviews as well. 
+          I have over 5 years of experience of managing software projects, creating and leading 
+          SCRUM teams to develop products in the various ICT4D projects and start-ups and over 3 years of SOLID Software development and architecting.
         </p>
       </div>
 </section>
 
     <!-- More about -->
     <section class="more-about">
-      <h2>Lets digg more</h2>
+      <h2>More about me</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
+        nesciunt excepturi quos  abouobcaecati incidunt voluptatem ipsam sunt ipsum,
         autem deleniti cupiditate molestias quis unde quae totam porro dicta
         iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
       </p>
     </section>
 
     <!-- Skills section -->
+    <section class="skills" id="skills">
+      <h2 class="skill-header">My Top Skills</h2>
+
+      <div class="skills-wrapper">
+        <div class="first-set animate__animated animate__pulse">
+          <img
+            src="assets/images/icons/icons8-javascript.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/images/icons/icons8-docker.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/images/icons/icons8-html-5.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+        </div>
+
+        <div class="second-set animate__animated animate__pulse">
+          <img
+            src="assets/images/icons/cakephp.png"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/images/icons/aws.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/images/icons/icons8-git.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+        </div>
+        <div class="second-set animate__animated animate__pulse">
+          <img
+            src="assets/images/icons/icons8-jira-144.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/images/icons/icons8-dynamics-365-144.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+          <img
+            src="assets/images/icons/icons8-asana.svg"
+            alt=""
+            loading="lazy"
+            class="icon icon-card"
+          />
+        </div>
+      </div>
+    </section>
 
     <!-- Projects section -->
+    <section class="projects" id="projects">
+      <h2 class="projects-title">Most recent projects worked on</h2>
+      <div class="projects-container">
+        <div class="project-container project-card">
+          <img
+            src="assets/images/KAINO-Logo.png"
+            alt="expense-tracker"
+            loading="lazy"
+            class="project-pic"
+          />
+          <h3 class="project-title">KAINOafrica</h3>
+          <p class="project-details">
+            KAINO is an ECD web and mobile solution that leverages Foundational Literacy and Numeracy (FLN)
+            in the form of STEM blended curriculum to be used by teachers and caregivers to teach children in schools.
+          </p>
+          <a href="https://kaino.africa" target="_blank" class="project-link">Check it Out</a>
+        </div>
+        <div class="project-container project-card">
+          <img
+            src="assets/images/coffeechat2.jpg"
+            alt="expense-tracker"
+            loading="lazy"
+            class="project-pic"
+          />
+          <h3 class="project-title">Coffee Chat</h3>
+          <p class="project-details">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!
+          </p>
+          <a href="https://www.coffeechat.co/" target="_blank" class="project-link">Check it Out</a>
+        </div>
+        <div class="project-container project-card">
+          <img
+            src="assets/images/zoofy-pro.png"
+            alt="netflic-clone"
+            loading="lazy"
+            class="project-pic"
+          />
+          <h3 class="project-title">Zoofy Pro</h3>
+          <p class="project-details">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!
+          </p>
+          <a href="https://zoofy.com/" target="_blank" class="project-link">Check it Out</a>
+        </div>
+        <div class="project-container project-card">
+          <img
+            src="assets/images/orderly.png"
+            alt="greeny-earth"
+            loading="lazy"
+            class="project-pic"
+          />
+          <h3 class="project-title">Orderly</h3>
+          <p class="project-details">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+            ratione vel inventore labore commodi modi quos culpa aut saepe!
+            Alias!
+          </p>
+          <a href="https://www.orderly.dk/" target="_blank" class="project-link">Check it Out</a>
+        </div>
+      </div>
+    </section>
 
     <!-- Contact section -->
 
