--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
           />
           <h3 class="project-title">KAINOafrica</h3>
           <p class="project-details">
-            KAINO is an ECD web and mobile solution that leverages Foundational Literacy and Numeracy (FLN)
-            in the form of STEM blended curriculum to be used by teachers and caregivers to teach children in schools.
+            KAINO is an ECD web and mobile solution. Leverages Foundational Literacy and Numeracy (FLN)
+            in the form of STEM blended curriculum in schools.
           </p>
           <a href="https://kaino.africa" target="_blank" class="project-link">Check it Out</a>
         </div>
@@ -167,9 +167,9 @@
           />
           <h3 class="project-title">Coffee Chat</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            The CoffeeChat platform enables teams in emerging markets to offer coaching to more of their leaders
+            by making it more affordable and revelant.
+
           </p>
           <a href="https://www.coffeechat.co/" target="_blank" class="project-link">Check it Out</a>
         </div>
@@ -182,9 +182,7 @@
           />
           <h3 class="project-title">Zoofy Pro</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            Zoofy Pro allows you to book a top craftsman as quickly as possible for all your small jobs in and around the house
           </p>
           <a href="https://zoofy.com/" target="_blank" class="project-link">Check it Out</a>
         </div>
@@ -197,9 +195,8 @@
           />
           <h3 class="project-title">Orderly</h3>
           <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
+            Orderly is a service that utilizes AI and modern warehouse technology
+            to remove all the hasles of trading quality items between private individuals.
           </p>
           <a href="https://www.orderly.dk/" target="_blank" class="project-link">Check it Out</a>
         </div>
