add scroll up button

--- a/index.html
+++ b/index.html
@@ -280,6 +280,12 @@
       </div>
 
     <!-- Scroll to top -->
+    <i class="scroll-up" id="scroll-up"
+    ><img
+      src="assets/images/icons/icons8-scroll-up-100.png"
+      class="socicon up-arrow"
+      alt="scroll-up"
+  /></i>
 
     <!-- Footer section -->
     <footer>
