--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 <!-- Navbar -->
 <nav>
-  <h1>LAWRENCE ONEN</h1>
+  <h1 class="brand">LAWRENCE ONEN</h1>
   <ul class="navigation">
     <li><a href="#about" class="nav-link">About</a></li>
     <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -151,11 +151,13 @@
             loading="lazy"
             class="project-pic"
           />
+          <h6 class="project-role">Role: Project Manager</h6>
           <!--<h3 class="project-title">KAINOafrica</h3>-->
           <p class="project-details">
             KAINO is an ECD web and mobile solution. Leverages Foundational Literacy and Numeracy (FLN)
             in the form of STEM blended curriculum in schools.
           </p>
+          
           <a href="https://kaino.africa" target="_blank" class="project-link">Check it Out</a>
         </div>
         <div class="project-container project-card">
@@ -166,6 +168,7 @@
             class="project-pic"
           />
           <h3 class="project-title">Coffee Chat</h3>
+          <h6 class="project-role">Role: Project Manager</h6>
           <p class="project-details">
             The CoffeeChat platform enables teams in emerging markets to offer coaching to more of their leaders
             by making it more affordable and revelant.
@@ -181,6 +184,7 @@
             class="project-pic"
           />
           <h3 class="project-title">Zoofy Pro</h3>
+          <h6 class="project-role">Role: Project Manager</h6>
           <p class="project-details">
             Zoofy Pro allows you to book a top craftsman as quickly as possible for all your small jobs in and around the house
           </p>
@@ -194,6 +198,7 @@
             class="project-pic"
           />
           <h3 class="project-title">Orderly</h3>
+          <h6 class="project-role">Role: Project Manager</h6>
           <p class="project-details">
             Orderly is a service that utilizes AI and modern warehouse technology
             to remove all the hasles of trading quality items between private individuals.
