--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
     <section class="more-about">
       <h2>More about me</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos  abouobcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+        I'm that guy you want on your team. Just buy we me coffee and we will work and laugh and play as long 
+        as we are winning.
       </p>
     </section>
 
