--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             loading="lazy"
             class="project-pic"
           />
-          <h6 class="project-role">Role: Project Manager</h6>
+          <h6 class="project-role">Role: CTO & Technical leads</h6>
           <!--<h3 class="project-title">KAINOafrica</h3>-->
           <p class="project-details">
             KAINO is an ECD web and mobile solution. Leverages Foundational Literacy and Numeracy (FLN)
@@ -196,7 +196,7 @@
             class="project-pic"
           />
           <h3 class="project-title">Orderly</h3>
-          <h6 class="project-role">Role: Project Manager</h6>
+          <h6 class="project-role">Role: Software Engineer</h6>
           <p class="project-details">
             Orderly is a service that utilizes AI and modern warehouse technology
             to remove all the hasles of trading quality items between private individuals.
