update roles again

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             loading="lazy"
             class="project-pic"
           />
+          <h3 class="project-title">KAINOafrica</h3>
           <h6 class="project-role">Role: CTO & Technical leads</h6>
           <!--<h3 class="project-title">KAINOafrica</h3>-->
           <p class="project-details">
